--- a/css/transitions.css
+++ b/css/transitions.css
@@ -35,3 +35,12 @@
   background-color: darkslategray;
   color: white;
 }
+
+#ex05 .box {
+  transition: background-color 0.5s, color 0.5s 0.2s;
+}
+
+#ex05 .box:hover {
+  background-color: darkslategray;
+  color: white;
+}
