--- a/css/transitions.css
+++ b/css/transitions.css
@@ -53,3 +53,25 @@
 #ex06 .wrapper:hover .box {
   background-color: darkslategray;
 }
+
+#ex07 .box:nth-child(1) {
+  transition-delay: 0.2s;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+#ex07 .box:nth-child(2) {
+  transition-delay: 0.3s;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+#ex07 .box:nth-child(3) {
+  transition-delay: 0.4s;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+#ex07 .wrapper:hover .box {
+  background-color: darkslategray;
+}
