réalisation de l'exercice 11

--- a/css/transitions.css
+++ b/css/transitions.css
@@ -111,3 +111,12 @@
 #ex10 .box:hover {
   transform: translateY(19%);
 }
+
+#ex11 .box {
+  transition-property: transform;
+  transition-duration: 0.3s;
+}
+
+#ex11 .box:hover {
+  transform: rotate(90deg);
+}
